# VibeSwap

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  INVESTOR_SUMMARY.md  LinkedIn_Posts.md  MEDIUM_ARTICLE.md  NERVOS_PROPOSAL.md  PRIVACY_COIN_SUPPORT.md  PROPOSAL_JOURNEY.md  README.md  README_MVP.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  WHITEPAPER.md  docker-compose.dev.yml  docker-compose.yml  foundry.toml  index.html  package-lock.json  setup.sh  slither.config.json
ckb/: Cargo.toml  Makefile  deploy.json
ckb/.cargo/: config.toml
ckb/deploy/: Cargo.toml
ckb/deploy/src/: main.rs
ckb/lib/lending-math/: Cargo.toml
ckb/lib/mmr/: Cargo.toml
ckb/lib/pow/: Cargo.toml
ckb/lib/types/: Cargo.toml
ckb/lib/vibeswap-math/: Cargo.toml
ckb/schemas/: cells.mol
ckb/scripts/amm-pool-type/: Cargo.toml
ckb/scripts/batch-auction-type/: Cargo.toml
ckb/scripts/commit-type/: Cargo.toml
ckb/scripts/compliance-type/: Cargo.toml
ckb/scripts/config-type/: Cargo.toml
ckb/scripts/insurance-pool-type/: Cargo.toml
ckb/scripts/knowledge-type/: Cargo.toml
ckb/scripts/lending-pool-type/: Cargo.toml
ckb/scripts/lp-position-type/: Cargo.toml
ckb/scripts/oracle-type/: Cargo.toml
ckb/scripts/pow-lock/: Cargo.toml
ckb/scripts/prediction-market-type/: Cargo.toml
ckb/scripts/prediction-position-type/: Cargo.toml
ckb/scripts/vault-type/: Cargo.toml
ckb/sdk/: Cargo.toml
ckb/sdk/src/: accounting.rs  analytics.rs  antibot.rs  arbitrage.rs  assembler.rs  auction.rs  auction_v2.rs  batch.rs  bridge.rs  cache.rs  checkpoint.rs  circuit_breaker.rs  collector.rs  compliance.rs  config.rs  consensus.rs  cross_chain.rs  dao_voting.rs  data_feed.rs  delegate.rs  emission.rs  escrow.rs  fees.rs  flashloan.rs  gauge.rs  governance.rs  identity.rs  incentive.rs  indexer.rs  insurance.rs  keeper.rs  knowledge.rs  lending.rs  lib.rs  liquidity.rs  market_maker.rs  math_ext.rs  metrics.rs  migration.rs  miner.rs  (+33 more)
ckb/tests/: Cargo.toml
ckb/tests/src/: adversarial.rs  assembler.rs  consensus.rs  fuzz.rs  governance.rs  insurance.rs  integration.rs  lending.rs  lib.rs  math_parity.rs  oracle.rs  prediction.rs  risk.rs  token.rs
contracts-ckb/: AUGMENTATION_SURFACE.md  CHAIN_BUILD_README.md  Cargo.toml  FIRST_BLOCK_RECEIPT.md  FORK_PLAN.md  FORK_VS_MAINNET_ANSWER.md  NCI_CONSENSUS_ANSWER.md  OPERATIONS.md  README.md  REORG_BEHAVIOR_DESIGN.md  UPSTREAM.md  build-all-msvc.bat  build-msvc.bat
contracts-ckb/bls-aggregation/: IMPLEMENTATION_PLAN.md  SERIALIZATION_SPEC.md
contracts-ckb/bls-aggregator/: Cargo.toml  README.md  build-msvc.bat
contracts-ckb/bls-aggregator/src/: digest.rs  main.rs  witness.rs
contracts-ckb/bls-aggregator/tests/: integration.rs
contracts-ckb/bls-verify/: Cargo.toml  README.md
contracts-ckb/bls-verify/src/: aggregate.rs  lib.rs  (+2 more)
contracts-ckb/chain-spec/: README.md  vibeswap-ckb-dev.toml
contracts-ckb/circuit-breaker-cell-type-script/: Cargo.toml  README.md
contracts-ckb/commit-reveal-auction-cell-type-script/: Cargo.toml  README.md
contracts-ckb/constitutional-bounds-cell-type-script/: Cargo.toml  README.md
contracts-ckb/cross-chain-in-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/cross-chain-out-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/deposit-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/emergency-pause-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/governance-update-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/lawson-constants-cell-type-script/: Cargo.toml  README.md
contracts-ckb/messaging-hub-attestation-cell-type-script/: Cargo.toml  README.md
contracts-ckb/messaging-hub-burn-receipt-cell-type-script/: Cargo.toml  README.md
contracts-ckb/messaging-hub-canonical-token-cell-type-script/: Cargo.toml  README.md
contracts-ckb/messaging-hub-validator-registry-cell-type-script/: Cargo.toml  README.md
contracts-ckb/nci-score-cell-type-script/: Cargo.toml  README.md
contracts-ckb/shapley-distributor-cell-type-script/: Cargo.toml  README.md
contracts-ckb/slash-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/specs/: INDEX.md  batch-cycle-resolver.md  bls12-381-cycle-budget-spike.md  circuit-breaker.md  commit-reveal-auction.md  composable-resolution-paths.md  cross-pool-lp.md  lawson-constants.md  messaging-hub.md  multi-curve-amm.md  nci-boundary-enforcement.md  nci-consensus.md  pairwise-verifier.md  shapley-distributor.md  slash-router.md  thin-pool-fee-subsidy.md  vibe-amm.md  vibeswap-core-port-classification.md  zk-router-verifier.md
contracts-ckb/test-infra/: SETUP.md
contracts-ckb/tests/: Cargo.toml  README.md
contracts-ckb/validator-update-boundary-cell-type-script/: Cargo.toml  README.md
contracts-ckb/vibe-amm-cell-type-script/: Cargo.toml  README.md
contracts-ckb/vibeswap-canonical-token-type-script/: Cargo.toml  README.md
contracts-ckb/withdrawal-boundary-cell-type-script/: Cargo.toml  README.md
oracle/: .env.example  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  runner.py
oracle/backtest/: __init__.py  adversarial_search.py  agents.py  amm.py  batch_auction.py  engine.py  generate_vectors.py  guardian_collusion.py  metrics.py  reward_feedback.py  run.py  scenarios.py  shapley_reference.py  state_machine.py
oracle/config/: oracle.example.yaml
oracle/feeds/: __init__.py  aggregator.py  base.py
oracle/kalman/: __init__.py  covariance.py  filter.py
oracle/models/: __init__.py  leverage.py  regime.py  signal.py  stablecoin.py  true_price.py
oracle/regime/: __init__.py  cascade_detector.py  classifier.py  leverage_stress.py
oracle/signals/: __init__.py  generator.py
oracle/stablecoins/: __init__.py  analyzer.py  classifier.py  usdc_model.py  usdt_model.py
oracle/tests/: __init__.py  test_adversarial_search.py  test_config.py  test_feeds.py  test_full_pipeline.py  test_guardian_collusion.py  test_halving_schedule.py  test_property_exhaustive.py  test_shapley_reference.py  test_state_machine.py
(+3697 files in other folders)
