[workspace]
resolver = "2"
members = [
    "primitive-cell-type-script",
    "primitive-cell-lock-script",
    "datatoken-cell-type-script",
    "lineage-vault-cell-type-script",
    "escrow-vault-cell-type-script",
    "proof-of-mind-lock-script",
    "vibeswap-canonical-token-type-script",
    "lawson-constants-cell-type-script",
    # ConstitutionalBoundsCell: immutable post-genesis bounds + cross-constraint
    # op-codes (e.g. SUM_LT(pow_bps, pos_bps, pom_bps)) per
    # specs/nci-boundary-enforcement.md §2.5 + OPERATIONS.md Day 2 deploy.
    # Lawson registry cell-deps this for value/alpha bound checks.
    "constitutional-bounds-cell-type-script",
    # IMessagingHub canonical-burn-and-mint cells (Agent 13 drift-fix:
    # interface existed since 2026-05, implementation never landed on
    # EVM; now chain-native on CKB-fork per [J·vibeswap-ckb-sovereign-pivot]).
    "bls-verify",
    "messaging-hub-canonical-token-cell-type-script",
    "messaging-hub-burn-receipt-cell-type-script",
    "messaging-hub-validator-registry-cell-type-script",
    "messaging-hub-attestation-cell-type-script",
    # Circuit-breaker triad (REINTERPRET port of contracts/core/CircuitBreaker.sol).
    # Composes with lawson-constants-cell-type-script (threshold + cooldown
    # + quorum source via cell-dep) and the pending NCI ValidatorRegistry
    # (attester identity). See contracts-ckb/specs/circuit-breaker.md.
    "circuit-breaker-cell-type-script",
    # NCI three-pillar score cell — gates every vibeswap-app boundary per
    # NCI_CONSENSUS_ANSWER.md Position C + specs/nci-boundary-enforcement.md.
    "nci-score-cell-type-script",
    # Deposit boundary cell — first of 7 boundary cells per
    # specs/nci-boundary-enforcement.md §2.1. Authorizes external -> internal
    # value transitions; cell-deps NCIScoreCell + LawsonConstantsRegistry;
    # composes same-tx with vibeswap-canonical-token-type-script for amount
    # conservation. Day 5 of OPERATIONS.md first-smoke target.
    "deposit-boundary-cell-type-script",
    "tests",
]
# `bls-aggregator` is a host-target binary (NOT a CKB cell). It builds
# under the host toolchain (stable), produces aggregated witness blobs
# off-chain, and is bundled with the validator node, not the chain. It
# must NOT compile under the workspace's `riscv64imac-unknown-none-elf`
# target. Excluded from the workspace; has its own Cargo.toml with a
# stable-toolchain pin.
exclude = [
    "bls-aggregator",
]

# Per CKB script conventions, default profile is release-stripped to keep
# RISC-V binary size down. Capsule overrides as needed.
[profile.release]
overflow-checks = true
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"
lto = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VibeSwap contributors"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
ckb-std = { version = "0.16", default-features = false }
# BLS12-381 pure-Rust no_std crate per the cycle-budget spike Path-1+3 verdict.
# Spec: contracts-ckb/specs/bls12-381-cycle-budget-spike.md §5.
# Pinned to 0.8 (current stable as of 2026-06). Disable `pairings` default
# only if we move to off-chain-only verification (we don't — on-chain pair
# verify is the whole point of Path 1+3).
# TODO: verify against bls12_381 0.x — minor version may shift between
# now and capsule-build; reproducibility harness will lock-step.
bls12_381 = { version = "0.8", default-features = false, features = ["alloc", "pairings", "groups"] }
# Heapless containers shared across cell crates.
heapless = { version = "0.8", default-features = false }
