[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeswap-oracle"
version = "1.0.0"
description = "True Price Oracle for VibeSwap - Bayesian equilibrium price estimation with asymmetric stablecoin treatment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "VibeSwap Team"}
]
keywords = [
    "defi",
    "oracle",
    "kalman-filter",
    "price-discovery",
    "manipulation-detection",
    "stablecoin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "web3>=6.0.0",
    "eth-account>=0.8.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/WGlynn/VibeSwap"
Documentation = "https://github.com/WGlynn/VibeSwap/tree/master/docs"
Repository = "https://github.com/WGlynn/VibeSwap"

[tool.setuptools.packages.find]
where = ["."]
include = ["oracle*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
