[package]
name = "vibeswap-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
vibeswap-math = { path = "../lib/vibeswap-math" }
vibeswap-mmr = { path = "../lib/mmr" }
vibeswap-pow = { path = "../lib/pow" }
vibeswap-types = { path = "../lib/types" }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
