[package]
name = "circuit-breaker-cell-type-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Type-script enforcing multi-level circuit-breaker cells (BreakerCell + BreakerAttestationCell + BreakerResumeQueueCell) on CKB. Composes with LawsonConstantsRegistry (threshold-source) + NCI-validator-set (attester-identity)."

[[bin]]
name = "circuit-breaker-cell-type-script"
path = "src/main.rs"

[dependencies]
# CKB script standard library: syscalls, cell inspection, witness parsing.
# Workspace pin: 0.16 (see vibeswap/contracts-ckb/Cargo.toml).
ckb-std = { workspace = true }
# Heapless containers shared across cell crates. Bound chosen at 16
# (per-tx max breaker cells) — generous over the realistic per-tx
# footprint where a single mechanism action touches one BreakerCell.
heapless = { workspace = true }

# NOTE: integration tests do NOT live in this crate. The on-chain crate is
# no_std + no_main and cannot host `cargo test` runners. The companion
# `tests/test_basic.rs` file in THIS directory is a reviewable test-spec
# stub; the runnable integration test follows the pattern in the workspace
# `tests` crate (see `contracts-ckb/tests/Cargo.toml`). The `[[test]]`
# target is intentionally NOT declared here.
#
# CYCLE5: when this crate's tests are wired in `contracts-ckb/tests/`, add
# a module file `tests/src/circuit_breaker_cell_type_tests.rs` there that
# mirrors `tests/src/primitive_cell_type_tests.rs`.
