[package]
name = "deposit-boundary-cell-type-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Deposit boundary cell: authorizes external->internal value transitions into vibeswap-app per nci-boundary-enforcement.md §2.1."

[[bin]]
name = "deposit-boundary-cell-type-script"
path = "src/main.rs"

[dependencies]
ckb-std = { workspace = true }
heapless = { workspace = true }
