[package]
name = "slash-boundary-cell-type-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Slash boundary cell: authorizes validator bond slashing on evidence per nci-boundary-enforcement.md §2.4."

[[bin]]
name = "slash-boundary-cell-type-script"
path = "src/main.rs"

[dependencies]
ckb-std = { workspace = true }
heapless = { workspace = true }
